--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -20,6 +20,11 @@
     text-align: center;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
     background: #4393B9;
+    margin-bottom: 25px;
+}
+
+.thumbnail {
+    padding-top: 10px;
 }
 
 .footer {
