--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -17,9 +17,8 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 
 // Component styles are injected through grunt
 // injector
-@import 'account/login/login.scss';
-@import 'active/active.scss';
 @import 'admin/admin.scss';
+@import 'home/home.scss';
 @import 'main/main.scss';
 @import 'modal/modal.scss';
 // endinjector
