--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -1,10 +1,16 @@
+body {
+    background-image: url("/assets/images/dark_embroidery.png");
+    background-repeat: repeat;
+}
+
 .thing-form {
     margin: 20px 0;
 }
 
 #banner {
     border-bottom: none;
-    margin-top: -20px;
+    margin-top: 10%;
+    color: #FAF0E6;
 }
 
 #banner h1 {
@@ -13,23 +19,33 @@
     letter-spacing: -1px;
 }
 
+#login {
+    color: #FAF0E6;
+    /*max-width: 20%;*/
+}
+
 .hero-unit {
     position: relative;
-    padding: 30px 15px;
+    padding: 15px 15px;
     color: #F5F5F5;
     text-align: center;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-    background: #4393B9;
-    margin-bottom: 25px;
 }
 
-.thumbnail {
-    padding-top: 10px;
+.btn-lg, .btn-group-lg > .btn {
+    color: #333;
+}
+
+.has-error .help-block {
+    color: #FAF0E6;
 }
 
 .footer {
+    color: #FAF0E6;
     text-align: center;
     padding: 30px 0;
-    margin-top: 70px;
-    border-top: 1px solid #E5E5E5;
+    margin-top: 20px;
+    /*border-top: 1px solid #E5E5E5;*/
 }
+
+.footer a {color: #FAF0E6}
