--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -1,10 +1,9 @@
 body {
     background-image: url("/assets/images/dark_embroidery.png");
     background-repeat: repeat;
-}
-
-.thing-form {
-    margin: 20px 0;
+    font-family: 'Monda', sans-serif;
+    font-weight: normal;
+    color: #fff;
 }
 
 #banner {
@@ -14,35 +13,51 @@ body {
 }
 
 #banner h1 {
-    font-size: 60px;
+    font-size: 75px;
     line-height: 1;
-    letter-spacing: -1px;
-}
-
-#login {
-    color: #FAF0E6;
-    /*max-width: 20%;*/
+    font-family: 'Lobster', cursive;
+    font-weight: normal;
 }
 
 #banner h1 a {
-    color: #FAF0E6;
+    color: #00CED1;
     text-decoration: none;
+    cursor: default;
+    transition: color 1s;
+    -moz-transition: color 1s; /* Firefox 4 */
+    -webkit-transition: color 1s; /* Safari and Chrome */
+    -o-transition: color 1s; /* Opera */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    text-shadow: 0 1px 0 #fff,
+               0 2px 0 #fff,
+               0 3px 0 #fff,
+               0 4px 0 #fff,
+               0 5px 0 #fff,
+               0 6px 1px rgba(200,215,220,.1),
+               0 0 5px rgba(200,215,220,.1),
+               0 1px 3px rgba(200,215,220,.4),
+               0 3px 5px rgba(200,215,220,.3),
+               0 5px 10px rgba(200,215,220,.30),
+               0 20px 20px rgba(200,215,220,.20);
 }
 
 #banner h1 a:hover {
-    color: #fff;
-    text-decoration: none;
+    color: #FF1493;
+    /*text-decoration: none;*/
 }
 
-#banner h1 a:active {
-    color: #fff;
-    text-decoration: none;
+#login h1, #register h1 {
+    margin-left: -2px;
 }
 
 .hero-unit {
     position: relative;
     padding: 15px 15px;
-    color: #F5F5F5;
     text-align: center;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
 }
@@ -52,15 +67,19 @@ body {
 }
 
 .has-error .help-block {
-    color: #FAF0E6;
+    font-weight: normal;
+    color: #fff;
+}
+
+label {
+    font-weight: normal;
 }
 
 .footer {
-    color: #FAF0E6;
     text-align: center;
     padding: 30px 0;
     margin-top: 20px;
-    /*border-top: 1px solid #E5E5E5;*/
+    font-weight: normal;
 }
 
-.footer a {color: #FAF0E6}
+.footer a {color: #fff;}
