--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -18,7 +18,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 // Component styles are injected through grunt
 // injector
 @import 'admin/admin.scss';
-@import 'home/home.scss';
+@import 'dashboard/dashboard.scss';
 @import 'main/main.scss';
 @import 'modal/modal.scss';
 // endinjector
