--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -3,6 +3,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 
 @import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
 @import 'font-awesome/scss/font-awesome';
+@import 'Bootflat/bootflat/scss/bootflat';
 
 /**
  * App-wide Styles
