--- a/client/app/dashboard/dashboard.scss
+++ b/client/app/dashboard/dashboard.scss
@@ -8,11 +8,9 @@
 	margin: 20px;
 	border-radius: 3px;
 	color: #333;
-    box-shadow: 0 0 25px black;
 }
 
-h2 {
-    font-family: 'Lobster', cursive;
+h3 {
     font-weight: normal;
 
     strong {
@@ -22,14 +20,11 @@ h2 {
 }
 
 a {
-	color: #00CED1;
+	color: #ED5565;
 	text-decoration: none;
-    transition: color 0.5s;
-    -moz-transition: color 0.5s; /* Firefox 4 */
-    -webkit-transition: color 0.5s; /* Safari and Chrome */
-    -o-transition: color 0.5s; /* Opera */
 }
-a:hover {color:#333;text-decoration: none;}
+
+a:hover {color:#DA4453;text-decoration: none;}
 
 /*
  *	Checkbox styles from https://github.com/flatlogic/awesome-bootstrap-checkbox
